--- a/src/app/components/app-navigation/app-navigation.component.html
+++ b/src/app/components/app-navigation/app-navigation.component.html
@@ -4,7 +4,9 @@
   >
   <a routerLink="/dashboard">Job Search App</a>
   <span class="spacer"></span>
-  <a href="#" class="github"
+  <a
+    href="https://github.com/davidelng/Progetto-Angular-Job-Search"
+    class="github"
     ><img
       src="../../../assets/github-circle-white-transparent.svg"
       alt="GitHub repo link"
